@@ -7,19 +7,28 @@ BEGIN {
   $ENV{MOJO_REACTOR} = 'Mojo::Reactor::Poll';
 }
 
-use Test::More tests => 337;
+use Test::More tests => 339;
 
 use FindBin;
 use lib "$FindBin::Bin/lib";
 
+# "Congratulations Fry, you've snagged the perfect girlfriend.
+#  Amy's rich, she's probably got other characteristics..."
 use File::Spec::Functions 'catdir';
 use Mojo::Date;
 use Mojo::Transaction::HTTP;
 use Mojolicious;
 use Test::Mojo;
 
-# "Congratulations Fry, you've snagged the perfect girlfriend.
-#  Amy's rich, she's probably got other characteristics..."
+# Missing config file
+{
+  eval { Test::Mojo->new('MojoliciousConfigTest')->app };
+  like $@, qr/mojolicious_config_test.conf" missing/, 'right error';
+  local $ENV{MOJO_MODE} = 'whatever';
+  is(Test::Mojo->new('MojoliciousConfigTest')->app->config->{it},
+    'works', 'right result');
+}
+
 my $t = Test::Mojo->new('MojoliciousTest');
 
 # Application is already available
