@@ -1,6 +1,9 @@
 
 3.35  2012-08-27
+  - Improved Mojolicious::Plugin::Config to accept mode specific config files
+    without a normal config file. (alexbyk, sri)
   - Improved documentation.
+  - Improved tests.
 
 3.34  2012-08-24
   - Improved documentation.
